fix: buildkit to use docker config for wrapper case only (#152)